# claude-gemini-delegation

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  install-delegation.ps1  install.py  legacy_install.py  legacy_setup.py  legacy_setup_hooks.py  pyproject.toml  setup.py  setup_hooks.py
.agents/rules/: delegation.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: dave.md
agents/code-review-agent-dave/: dave_audit.md  generate-audit.ps1  start-audit.ps1
agents/memory/: MEMORY.md  caller-detection.md
docs/: future-work.md  implementation_guide_revised.md  legacy-uninstall-notes.md
hooks/: __init__.py  analyze_metrics.py  delegate  delegate.bat  delegate.ps1  delegate_and_log.ps1  delegate_manager.ps1  delegate_manager.py  delegation_caller.py  delegation_guard.ps1  delegation_guard.py  gemini_delegate.py  gemini_fast_settings.json  post_delegate.py  pre_delegate.py  resolve_python.ps1
src/agent_delegation/: __init__.py  caller.py  cli.py  guard.py  guard_entry.py  installer.py  manager.py  policy.py  post_delegate.py  pre_delegate.py  runner.py
src/gemini_delegation/: __init__.py  cli.py  installer.py  runner.py  templates.py
tests/: test_cli.py  test_delegate_manager.py  test_gemini_delegate.py  test_global_cli.py  test_global_manager.py  test_hooks.py  test_install.py
tests/regression/: run_tests.sh  test_0.1_git_delegation.sh  test_0.2_codebase_analysis.sh  test_0.3_security_audit.sh  test_0.4_mixed_task.sh  test_0.5_web_search.sh  test_0.6_multi_file_search.sh  test_0.7_code_generation.sh
