[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-delegation"
version = "0.1.0"
description = "Delegation system for routing heavy LLM tasks to Gemini via Antigravity CLI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Carlos Duplar"}
]
dependencies = []

[project.optional-dependencies]
windows = ["pywinpty>=2.0.0"]

[project.scripts]
gemini-delegate = "gemini_delegation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
