[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-delegation"
version = "0.2.0"
description = "Global bounded delegation for Claude, Codex, ChatGPT, and Gemini"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Carlos Duplar"}
]
dependencies = []

[project.optional-dependencies]
windows = ["pywinpty>=2.0.0"]

[project.scripts]
agent-delegation = "agent_delegation.cli:main"
gemini-delegate = "gemini_delegation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
