[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-delegation"
version = "0.3.0"
description = "Global bounded delegation for Claude, Codex, ChatGPT, and Gemini"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Carlos Duplar"}
]
dependencies = []

[project.optional-dependencies]
windows = ["pywinpty>=2.0.0"]

[project.scripts]
agent-delegation = "agent_delegation.cli:main"
gemini-delegate = "gemini_delegation.cli:main"

[tool.setuptools]
packages = ["agent_delegation", "gemini_delegation", "agent_delegation_hook_assets"]
package-dir = {agent_delegation = "src/agent_delegation", gemini_delegation = "src/gemini_delegation", agent_delegation_hook_assets = "hooks"}

[tool.setuptools.package-data]
agent_delegation_hook_assets = ["*.ps1"]
